Arreglo merge (No compila-Leer descripción)
El mapa contiene una entidad ninja que contiene un componente transform el cual aun su método init no está finalizado

--- a/WeirdEngine/Projects/DataManager/DataManager.vcxproj
+++ b/WeirdEngine/Projects/DataManager/DataManager.vcxproj
@@ -36,6 +36,7 @@
     <ClInclude Include="..\..\src\DataManager\Header Files\TransformComponent.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\src\DataManager\Header Files\Component.cpp" />
     <ClCompile Include="..\..\src\DataManager\Source Files\DataManager.cpp" />
     <ClCompile Include="..\..\src\DataManager\Source Files\EntityC.cpp" />
     <ClCompile Include="..\..\src\DataManager\Source Files\FactoriesGestor.cpp" />
