--- a/WeirdEngine/Projects/DataManager/DataManager.vcxproj.filters
+++ b/WeirdEngine/Projects/DataManager/DataManager.vcxproj.filters
@@ -13,14 +13,8 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Archivos de encabezado\Componentes">
-      <UniqueIdentifier>{6acfe7ac-190f-4076-89de-11eb4198487b}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Archivos de origen\Componentes">
       <UniqueIdentifier>{7a7ec980-f087-4b80-ba73-cc443d11b33b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\Componentes\Factorias">
-      <UniqueIdentifier>{355b0096-6d28-4af5-80be-82f6ffcd4bf5}</UniqueIdentifier>
     </Filter>
     <Filter Include="Archivos de encabezado\Mensajes">
       <UniqueIdentifier>{26e2fd15-3ac2-4e43-8e09-1e11511ec0d1}</UniqueIdentifier>
@@ -31,6 +25,18 @@
     <Filter Include="Archivos de origen\Mensajes">
       <UniqueIdentifier>{0c44f31d-c1f0-42eb-a22b-40a406f80de3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Archivos de encabezado\Entidades">
+      <UniqueIdentifier>{6acfe7ac-190f-4076-89de-11eb4198487b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de encabezado\Entidades\Factorias">
+      <UniqueIdentifier>{355b0096-6d28-4af5-80be-82f6ffcd4bf5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de encabezado\Entidades\Componentes">
+      <UniqueIdentifier>{f2bdb70b-5efe-47ab-897e-76637f326e1f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de origen\Componentes\Componentes">
+      <UniqueIdentifier>{90e3ff99-e24c-4138-a750-13bf85eb767a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\DataManager\Header Files\DataManager.h">
@@ -39,32 +45,20 @@
     <ClInclude Include="..\..\src\DataManager\Header Files\json.hpp">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\DataManager\Header Files\Component.h">
-      <Filter>Archivos de encabezado\Componentes</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\DataManager\Header Files\TransformComponent.h">
-      <Filter>Archivos de encabezado\Componentes</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\DataManager\Header Files\RenderComponent.h">
-      <Filter>Archivos de encabezado\Componentes</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\DataManager\Header Files\InputComponent.h">
-      <Filter>Archivos de encabezado\Componentes</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\src\DataManager\Header Files\ComponentFactory.h">
-      <Filter>Archivos de encabezado\Componentes\Factorias</Filter>
+      <Filter>Archivos de encabezado\Entidades\Factorias</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\DataManager\Header Files\C_Factory.h">
-      <Filter>Archivos de encabezado\Componentes\Factorias</Filter>
+      <Filter>Archivos de encabezado\Entidades\Factorias</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\DataManager\Header Files\FactoriesGestor.h">
-      <Filter>Archivos de encabezado\Componentes\Factorias</Filter>
+      <Filter>Archivos de encabezado\Entidades\Factorias</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\DataManager\Header Files\FactoryRegister.h">
-      <Filter>Archivos de encabezado\Componentes\Factorias</Filter>
+      <Filter>Archivos de encabezado\Entidades\Factorias</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\DataManager\Header Files\EntityC.h">
-      <Filter>Archivos de encabezado\Componentes</Filter>
+      <Filter>Archivos de encabezado\Entidades</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\DataManager\Header Files\Messages_decl.h">
       <Filter>Archivos de encabezado\Mensajes</Filter>
@@ -75,27 +69,30 @@
     <ClInclude Include="..\..\src\DataManager\Header Files\Observer.h">
       <Filter>Archivos de encabezado\Mensajes</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\DataManager\Header Files\Container.h">
+      <Filter>Archivos de encabezado\Entidades</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\DataManager\Header Files\Component.h">
+      <Filter>Archivos de encabezado\Entidades\Componentes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\DataManager\Header Files\RenderComponent.h">
+      <Filter>Archivos de encabezado\Entidades\Componentes</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\src\DataManager\Header Files\TestComponent.h">
-      <Filter>Archivos de encabezado\Componentes</Filter>
+      <Filter>Archivos de encabezado\Entidades\Componentes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\DataManager\Header Files\TransformComponent.h">
+      <Filter>Archivos de encabezado\Entidades\Componentes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\DataManager\Header Files\WEInput.h">
+      <Filter>Archivos de encabezado\Entidades\Componentes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\DataManager\Source Files\DataManager.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\DataManager\Source Files\TransformComponent.cpp">
-      <Filter>Archivos de origen\Componentes</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\DataManager\Source Files\RenderComponent.cpp">
-      <Filter>Archivos de origen\Componentes</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\DataManager\Source Files\InputComponent.cpp">
-      <Filter>Archivos de origen\Componentes</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\DataManager\Source Files\EntityC.cpp">
-      <Filter>Archivos de origen\Componentes</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\DataManager\Source Files\TestComponent.cpp">
       <Filter>Archivos de origen\Componentes</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\DataManager\Source Files\FactoriesGestor.cpp">
@@ -107,8 +104,23 @@
     <ClCompile Include="..\..\src\DataManager\Source Files\Observer.cpp">
       <Filter>Archivos de origen\Mensajes</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\DataManager\Source Files\Container.cpp">
+      <Filter>Archivos de origen\Componentes</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\src\DataManager\Header Files\Component.cpp">
-      <Filter>Archivos de origen</Filter>
+      <Filter>Archivos de origen\Componentes\Componentes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\DataManager\Source Files\RenderComponent.cpp">
+      <Filter>Archivos de origen\Componentes\Componentes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\DataManager\Source Files\TestComponent.cpp">
+      <Filter>Archivos de origen\Componentes\Componentes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\DataManager\Source Files\TransformComponent.cpp">
+      <Filter>Archivos de origen\Componentes\Componentes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\DataManager\Source Files\WEInput.cpp">
+      <Filter>Archivos de origen\Componentes\Componentes</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
