--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 *.userosscache
 *.sln.docstates
 
+#Samples cegui
+/WeirdEngine/Dependencias/Dependencias cegui/src/FreeImage-3.15.0/Wrapper/FreeImage.NET/cs/Samples/
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
